--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -41,7 +41,6 @@
       "not dead",
       "not op_mini all"
     ],
-
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
